minor css padding fix: More spacing between sections

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
 
 section {
   background: black;
-  padding: 0 0 1rem 0;
+  padding: 1rem 1rem;
 }
 
 button {
